--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div>
+        <input type="text" id="dimension">
+        <button id="btn">Submit</button>
+    </div>
     <div class="grid-holder"></div>
 </body>
 </html>
