--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <div class="input">
+        Input a number: 
         <input type="text" id="dimension">
         <button id="btn">Submit</button>
     </div>
