--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         Input a number: 
         <input type="text" id="dimension">
         <button id="btn">Submit</button>
+        <p>Current Dimensions: 4 x 4</p>
     </div>
     <div class="grid-holder"></div>
 </body>
