minor fixes on changeGrid()

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         Input a number: 
         <input type="text" id="dimension">
         <button id="btn">Submit</button>
-        <p>Current Dimensions: 4 x 4</p>
+        <p>Current Dimensions: <span id="numDimensions">4 x 4</span></p>
     </div>
     <div class="grid-holder"></div>
 </body>
